Refactor Hikabrain and Spleef minigames: centralize message strings in Constants, implement PlayerUtils for inventory management, and enhance game logic for clearer player feedback.